docs note