@@ -14,7 +14,7 @@
 
 ---
 
-### 堆参数
+### JVM堆参数
 
 > 了解其内存分配
 
@@ -87,4 +87,27 @@ jvm参数：`-Xmx120M -Xms120M -XX:+UseAdaptiveSizePolicy -XX:SurvivorRatio=8 -X
 - 年轻代和老年代 1:2（40m：80m）
 - 由于默认jvm参数`-XX:SurvivorRatio=8`开启，`Eden`区与`Survivor`区的比值为8
   所以`Eden`、`Survivore 0`和`Survivore 1`区在这里占新生代的8:1:1（32m:4m:4m）
+
+### JVM堆内存默认大小
+
+> https://docs.oracle.com/javase/8/docs/technotes/guides/vm/gc-ergonomics.html
+
+- 堆内存初始容量为物理内存大小的1/64
+- 最大内存不超过物理内存的1/4
+
+```java
+public class HelloWorld {
+    @Test
+    public void test() throws Exception {
+        System.err.println(Runtime.getRuntime().totalMemory() / 1024 / 1024 + "MB"); // 366MB
+        System.err.println(Runtime.getRuntime().maxMemory() / 1024 / 1024 + "MB"); // 5428MB
+    }
+}
+```
+
+JVM运行参数：`-Xmx100M -Xms100M -XX:+UseG1GC -XX:+PrintGCDetails`
+
+> -XX:+PrintGCDetails =>  打印gc日志信息以进行性能调整和优化
+
+再次运行程序你会发现2个值都为100MB
 
